# plasma-redshift-control

./: .gitignore  CMakeLists.txt  Messages.sh
package/: metadata.desktop
package/contents/ui/: main.qml  (+1 more)
po/ast/: plasma_applet_org.kde.redshiftControl.po
po/az/: plasma_applet_org.kde.redshiftControl.po
po/be/: plasma_applet_org.kde.redshiftControl.po
po/ca/: plasma_applet_org.kde.redshiftControl.po
po/ca@valencia/: plasma_applet_org.kde.redshiftControl.po
po/cs/: plasma_applet_org.kde.redshiftControl.po
po/da/: plasma_applet_org.kde.redshiftControl.po
po/de/: plasma_applet_org.kde.redshiftControl.po
po/el/: plasma_applet_org.kde.redshiftControl.po
po/en_GB/: plasma_applet_org.kde.redshiftControl.po
po/es/: plasma_applet_org.kde.redshiftControl.po
po/et/: plasma_applet_org.kde.redshiftControl.po
po/eu/: plasma_applet_org.kde.redshiftControl.po
po/fi/: plasma_applet_org.kde.redshiftControl.po
po/fr/: plasma_applet_org.kde.redshiftControl.po
po/gl/: plasma_applet_org.kde.redshiftControl.po
po/hu/: plasma_applet_org.kde.redshiftControl.po
po/ia/: plasma_applet_org.kde.redshiftControl.po
po/it/: plasma_applet_org.kde.redshiftControl.po
po/ja/: plasma_applet_org.kde.redshiftControl.po
po/ka/: plasma_applet_org.kde.redshiftControl.po
po/ko/: plasma_applet_org.kde.redshiftControl.po
po/lt/: plasma_applet_org.kde.redshiftControl.po
po/nl/: plasma_applet_org.kde.redshiftControl.po
po/nn/: plasma_applet_org.kde.redshiftControl.po
po/pl/: plasma_applet_org.kde.redshiftControl.po
po/pt/: plasma_applet_org.kde.redshiftControl.po
(+17 files in other folders)
